@@ -1,3 +1,9 @@
+2010-02-04  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Application.cs: Add [MonoTODO] to CheckAndDownloadUpdateAsync.
+	Do not use EntryPointAssembly DP inside GetResourceStream since
+	it can be called outside the main thread.
+
 2010-02-03  Andreia Gaita  <avidigal@novell.com>
 
 	* DependencyProperty.g.cs, Events.g.cs: remove autogenerated files from
